2004-10-04  Edelhard Becker <ebecker@software-manufaktur.de>

	* configure.in: Detect CONFIG_X86_EMU486 when testing for
	cmpxchg() availability.

2004-10-04  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.*-i386-r8c3 and
	2.6.8rc1-ppc-r6c7.

	* include/nucleus/asm-*/system.h (xnarch_notify_shutdown): 
	* arch/*/hal/hal.c (__rthal_init): Force CPU affinity so that the
	HAL and the nucleus always keep their execution sequence on SMP
	systems wrt cleanup actions.

	* nucleus/shadow.c: Ask Linux to restart interrupted Xenomai
	syscalls.

	* testsuite/latency/latency.c (cleanup_upon_sig): Forcibly exit
	upon signal so that the sampler does not enter a tight error loop
	in RTAI mode after the time has been stopped.

2004-10-03  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-ppc/syscall.h (XENOMAI_DO_SYSCALL): Revert
	retval negation upon error.

2004-10-02  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.*-i386-r8c2.

	* include/nucleus/asm-*/system.h (xnarch_init): 
	* arch/*/hal/hal.c (__rthal_init): Force CPU affinity so that the
	HAL and the nucleus always keep their execution sequence on SMP
	systems wrt initialization chores.

2004-10-02  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* skins/rtai/module.c (__xeno_skin_init): Remove warnings about
	unused labels.

2004-10-01  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/trace.c: Add tracing module.

	* All GNUmakefile.am: Make the "distcheck" target work.

2004-10-01  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_shutdown): Split the cleanup work into two
	distinct phases delimited by calls to xnarch_notify_shutdown() and
	xnarch_notify_halt(), so that per-arch actions can be performed at
	different times during the shutdown process.
	
	* nucleus/shadow.c: Define xnshadow_grab_events() and
	xnshadow_release_events() to request/release kernel event