@@ -614,7 +614,7 @@ static void rthal_domain_entry (int iflag)
     for (trapnr = 0; trapnr < ADEOS_NR_FAULTS; trapnr++)
 	adeos_catch_event(trapnr,&rthal_trap_fault);
 
-    printk(KERN_INFO "RTAI[hal]: Loaded.\n");
+    printk(KERN_INFO "RTAI[hal]: Loaded over Adeos %s.\n",ADEOS_VERSION_STRING);
 
  spin:
 
